--- a/InKeLive-gcz_99/InKeLive/Logon/LogonViewController.xib
+++ b/InKeLive-gcz_99/InKeLive/Logon/LogonViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,6 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LogonViewController">
             <connections>
                 <outlet property="btnPwdVisable" destination="QrJ-Ln-FrP" id="cJb-KO-CL7"/>
+                <outlet property="btnRegiest" destination="nas-xq-Xh4" id="CVv-eh-iW7"/>
                 <outlet property="edtUserID" destination="dkG-KO-7tY" id="gEe-YK-ZXg"/>
                 <outlet property="edtUserPwd" destination="b91-UJ-KX0" id="5Dt-GL-KF1"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -72,12 +73,15 @@
                                 <action selector="btnForgetPassword:" destination="-1" eventType="touchUpInside" id="Aob-u2-ddv"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nas-xq-Xh4">
-                            <rect key="frame" x="243" y="325" width="58" height="29"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nas-xq-Xh4">
+                            <rect key="frame" x="12" y="325" width="296" height="29"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="296" id="H3t-J7-cqH"/>
+                                <constraint firstAttribute="height" constant="29" id="Jdy-yg-A4Q"/>
+                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <state key="normal" title="手机注册">
-                                <color key="titleColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
+                            <state key="normal" title="注册">
+                                <color key="titleColor" red="1" green="0.81176470590000005" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
                             <connections>
                                 <action selector="btnRegistered:" destination="-1" eventType="touchUpInside" id="ZKI-wf-a2c"/>
@@ -141,10 +145,16 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s7A-Tc-1WV">
+                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s7A-Tc-1WV">
                             <rect key="frame" x="12" y="279" width="296" height="38"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="1" green="0.81176470588235294" blue="0.23921568627450979" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="296" id="Qc9-d8-Jap"/>
+                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="38" id="Wcn-eG-MFK"/>
+                                <constraint firstAttribute="height" constant="38" id="lhL-Pd-1CT"/>
+                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="296" id="otU-T7-NkZ"/>
+                                <constraint firstAttribute="width" constant="296" id="s8n-NK-Ujc"/>
+                            </constraints>
                             <state key="normal" title="登录">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -174,8 +184,12 @@
                         <constraint firstAttribute="trailing" secondItem="dkG-KO-7tY" secondAttribute="trailing" constant="12" id="Adk-6C-Sbk"/>
                         <constraint firstItem="dkG-KO-7tY" firstAttribute="top" secondItem="meG-V6-elV" secondAttribute="bottom" constant="48" id="CMj-tf-Yw1"/>
                         <constraint firstItem="meG-V6-elV" firstAttribute="centerX" secondItem="qQo-0s-FoS" secondAttribute="centerX" id="DzS-wN-xV9"/>
+                        <constraint firstItem="nas-xq-Xh4" firstAttribute="top" secondItem="s7A-Tc-1WV" secondAttribute="bottom" constant="8" id="JOb-hE-dFa"/>
+                        <constraint firstAttribute="trailing" secondItem="nas-xq-Xh4" secondAttribute="trailing" constant="12" id="UZ9-JF-5Et"/>
+                        <constraint firstItem="nas-xq-Xh4" firstAttribute="height" secondItem="s7A-Tc-1WV" secondAttribute="height" id="ncU-7Z-THl"/>
                         <constraint firstItem="meG-V6-elV" firstAttribute="top" secondItem="qQo-0s-FoS" secondAttribute="top" constant="30" id="ret-z7-VAj"/>
                         <constraint firstItem="dkG-KO-7tY" firstAttribute="leading" secondItem="qQo-0s-FoS" secondAttribute="leading" constant="12" id="sPp-33-kgp"/>
+                        <constraint firstItem="nas-xq-Xh4" firstAttribute="leading" secondItem="qQo-0s-FoS" secondAttribute="leading" constant="12" id="yqn-Jw-MfG"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -194,12 +208,12 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="Eu6-hM-hdk"/>
-            <point key="canvasLocation" x="51" y="59.5"/>
+            <point key="canvasLocation" x="49.600000000000001" y="58.920539730134934"/>
         </view>
     </objects>
     <resources>
-        <image name="1258logo" width="72" height="87"/>
-        <image name="password_hidden" width="14" height="4"/>
+        <image name="1258logo" width="72" height="87.5"/>
+        <image name="password_hidden" width="14" height="4.5"/>
         <image name="password_visible" width="14" height="8"/>
         <image name="qq_icon" width="38" height="38"/>
         <image name="wechat_icon" width="38" height="38"/>
